--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body{
 .back{
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top:0;
   left:0;
   background: url('https://source.unsplash.com/n_Jb_d8O43Q');
@@ -80,7 +80,6 @@ body{
   height: 50px;
   margin: 0;
   padding: 0 20px;
-  float: left;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
 }
@@ -110,6 +109,49 @@ body{
   cursor: pointer;
 }
 
+.userImage{
+  font-family: 'MuseoModerno', cursive;
+  position: absolute;
+  font-size: 30px;
+  top:0;
+  right:0;
+  padding: 3%;
+  cursor: pointer;
+}
+
+.userIcon{
+  float: right;
+  margin-left: 10px;
+}
+
+
+#up:hover{
+  display: none;
+}
+
+#down{
+  display: none;
+  margin-top: 18px;
+}
+
+#up:hover~#down{
+  display: block;
+}
+/*
+#userIcon:hover~#userBox{
+  display: block;
+  transition-delay:12s;
+  transition-property: display;
+}
+
+#userBox:hover{
+  display: block;
+}
+*/
+.userImage img {
+  width: 50px;
+}
+
 a{
   text-decoration: none;
   color: white;
@@ -120,6 +162,11 @@ a{
       font-size:5.5vw;
       padding: 4%;
   }
+
+  .userImage{
+    font-size:5.5vw;
+    padding: 4%;
+}
 
   .form{
       width: 90%;
@@ -134,4 +181,28 @@ a{
   .container input[type='submit']{
       width: 22%;
   }
+}
+
+.userBox{
+  width: 180px;
+  align-items: center;
+  outline: 1px solid black;
+  background-color: black;
+  opacity: 60%;
+}
+
+.userBox p{
+  font-size: 22px;
+  margin: 0px;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid white;
+}
+
+#login-btn{
+  border-radius: 25px;
+}
+
+#login-register{
+  font-size: 20px;
 }
